--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
   color: #4cd137;
   font-size: 8rem;
   word-spacing: .25rem; }
-  @media only screen and (max-width: 426px) {
+  @media only screen and (max-width: 26.625em) {
     .main-heading {
       font-size: 5rem;
       word-spacing: none; } }
@@ -61,7 +61,7 @@ body {
   color: #4cd137;
   font-size: 3.5rem;
   letter-spacing: .1rem; }
-  @media only screen and (max-width: 426px) {
+  @media only screen and (max-width: 26.625em) {
     .tert-heading {
       font-size: 2.25rem;
       word-spacing: none; } }
@@ -191,7 +191,7 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-template-rows: repeat(auto-fit, min-content);
   grid-gap: 2rem; }
-  @media only screen and (max-width: 426px) {
+  @media only screen and (max-width: 26.625em) {
     .card__box {
       grid-template-columns: repeat(auto-fit, minmax(500px, 1fr)); } }
 
@@ -220,5 +220,5 @@ body {
     color: #27ae60; }
 
 .header {
-  height: 50rem;
+  height: 80vh;
   position: relative; }
