--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -31,7 +31,7 @@
 .card__box {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    @media only screen and (max-width: 426px) {
+    @media only screen and (max-width: 26.625em) {
         grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
     }
     grid-template-rows: repeat(auto-fit, min-content);
