Editing and fixing

--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,7 @@ html {
 body {
   font-family: "Rubik", sans-serif;
   font-size: 1.4rem;
-  line-height: 1.5;
-  background-color: #2c3e50; }
+  line-height: 1.5; }
 
 .container {
   width: 100%;
@@ -49,21 +48,13 @@ body {
   grid-template-areas: "head" "projects" "about" "footer"; }
 
 .main-heading {
-  color: #4cd137;
-  font-size: 8rem;
-  word-spacing: .25rem; }
+  color: #27ae60;
+  font-size: 7rem;
+  word-spacing: .25rem;
+  font-family: "Rubik", sans-serif; }
   @media only screen and (max-width: 26.625em) {
     .main-heading {
       font-size: 5rem;
-      word-spacing: none; } }
-
-.tert-heading {
-  color: #4cd137;
-  font-size: 3.5rem;
-  letter-spacing: .1rem; }
-  @media only screen and (max-width: 26.625em) {
-    .tert-heading {
-      font-size: 2.25rem;
       word-spacing: none; } }
 
 .copy-normal {
@@ -87,7 +78,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: -1;
-  opacity: .15; }
+  opacity: .2; }
   .bg-video__content {
     height: 100%;
     width: 100%;
@@ -113,7 +104,7 @@ body {
 
 .section-about {
   grid-area: about;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url(../img/about-2.jpeg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url(../../img/about-2.jpeg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -173,7 +164,7 @@ body {
 
 .project__box {
   text-align: center;
-  font-family: "Finger Paint", cursive;
+  font-family: "Rubik", sans-serif;
   text-transform: lowercase; }
   .project__box--heading {
     color: #c5c5c5;
@@ -189,7 +180,7 @@ body {
 .card__box {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-template-rows: repeat(auto-fit, min-content);
+  grid-auto-rows: min-content;
   grid-gap: 2rem; }
   @media only screen and (max-width: 26.625em) {
     .card__box {
@@ -205,13 +196,13 @@ body {
     width: 100%;
     height: auto; }
   .project-card__info--copyLink:not(:last-child) {
-    margin-bottom: 3rem;
-    margin-top: 3rem; }
+    margin-bottom: 2rem;
+    margin-top: 1rem; }
   .project-card__info--copy {
     padding: .25rem; }
   .project-card__info--site, .project-card__info--github {
     font-size: 1.5rem;
-    text-transform: uppercase; }
+    text-transform: lowercase; }
   .project-card__info--site:link, .project-card__info--site:visited {
     text-decoration: none;
     color: #27ae60; }
@@ -220,5 +211,8 @@ body {
     color: #27ae60; }
 
 .header {
-  height: 80vh;
-  position: relative; }
+  height: 15vh;
+  width: 100%;
+  position: relative;
+  background-color: #000;
+  z-index: -1; }
