--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -9,6 +9,9 @@ font-family: 'Rubik', sans-serif;
 $font-primary: 'Rubik', sans-serif;
 $font-secondary: 'Crimson Text', serif; 
 $font-tertiary: 'Finger Paint', cursive;
+$font-quad: 'Freckle Face', cursive;
+$font-quint: 'Lacquer', cursive;
+$font-sext: 'Nosifer', cursive;
 /////////////////////////////////////////////////////////////
 
 
