--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -39,7 +39,7 @@
 }
 
 .project-card {
-    border: .5rem solid $color-softWhite;
+    border: .5rem solid $color-primary-dark;
     border-radius: 1rem;
     transition: all .3s;
     background-color: $color-white;
