--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -25,5 +25,9 @@ body {
                          "projects"
                          "about"
                          "footer";
-    
+   @media only screen and (min-width: 300px) and (max-width: 500px) {
+       display: flex;
+       flex-direction: column;
+       flex-wrap: wrap;
+   } 
 }
