changed up flexbox stuff

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -49,12 +49,18 @@ body {
   @media only screen and (min-width: 300px) and (max-width: 500px) {
     .container {
       display: flex;
-      flex-direction: column;
-      flex-wrap: wrap; }
-      .container > * {
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-items: center; }
+      .container .header {
+        display: none; }
+      .container .card__box {
         display: flex;
-        flex-direction: column;
-        flex-wrap: wrap; } }
+        flex-flow: column wrap; }
+      .container .project-card {
+        width: 88rem; }
+      .container .footer {
+        display: none; } }
 
 .main-heading {
   color: #27ae60;
